src/main/java/org/example/mobble/_util/error/ex/Exception404.java
package org.example.mobble._util.error.ex;

public class Exception404 extends RuntimeException {
    public Exception404(String message) {
        super(message);
    }
}
